--- a/New Implementation.vcxproj
+++ b/New Implementation.vcxproj
@@ -130,12 +130,14 @@
     <ClCompile Include="fmath.cpp" />
     <ClCompile Include="mesh.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="misc.cpp" />
     <ClCompile Include="node.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="droplet.h" />
     <ClInclude Include="fmath.h" />
     <ClInclude Include="mesh.h" />
+    <ClInclude Include="misc.h" />
     <ClInclude Include="node.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
