--- a/New Implementation.vcxproj
+++ b/New Implementation.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="fmath.cpp" />
     <ClCompile Include="mesh.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="mesh_print.cpp" />
     <ClCompile Include="misc.cpp" />
     <ClCompile Include="node.cpp" />
   </ItemGroup>
